Fix error with too long random seq number. Add possibility to upload own QR code via upload.

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h1 span {
 	clear: both;
 }
 
-label {
+.modal-window label {
 	text-transform:uppercase;
 	color:#C0C0C0;
 	font-size:90%;
@@ -154,23 +154,11 @@ input, select {
 }
 .container {
 	padding:10px;
+	z-index: 99999;
 	box-sizing: border-box;
 	max-width:100%;
 	position:relative;
 	height: 100vh;
-}
-.btn {
-	display:inline-block;
-	text-decoration: none;
-	position:absolute;
-	right:8px;
-	padding:8px;
-	top:10px;
-	font-size:140%;
-}
-
-.bookmark {
-	right: 40px;	
 }
 
 #copyright {
@@ -191,4 +179,59 @@ input, select {
 	label {
 		font-size:80%;
 	}
+}
+
+.menu {
+	display:inline-block;
+	text-decoration: none;
+	position:absolute;
+	right:8px;
+	padding:8px;
+	top:10px;
+	font-size:160%;
+}
+
+.menu > * {
+	cursor: pointer;
+	vertical-align: middle;;
+}
+
+.mdi--bookmark-plus {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M17 3a2 2 0 0 1 2 2v16l-7-3l-7 3V5a2 2 0 0 1 2-2zm-6 4v2H9v2h2v2h2v-2h2V9h-2V7z'/%3E%3C/svg%3E");
+}
+
+.mdi--qrcode-edit {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M5 5h2v2H5zM1 1h10v10H1zm2 2v6h6V3zm2 14h2v2H5zm-4-4h10v10H1zm2 2v6h6v-6zm10-2h4v2h2v-2h4v2h-4v2h4v6h-4v-2h-4v2h-2v-2h2v-2h-2zm8 8v-2h-2v2zm-2-4h-2v-2h-2v4h4zm3.7-13.65l-1 1l-2.05-2l1-1c.2-.21.54-.22.77 0l1.28 1.23c.21.2.22.54 0 .77M13 8.94l6.07-6.06l2.05 2.05L15.06 11H13z'/%3E%3C/svg%3E");
+}
+
+.mdi--edit {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83l3.75 3.75M3 17.25V21h3.75L17.81 9.93l-3.75-3.75z'/%3E%3C/svg%3E");
+  }
+
+.mdi--qrcode-plus {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M5 5h2v2H5zM1 1h10v10H1zm2 2v6h6V3zm2 14h2v2H5zm-4-4h10v10H1zm2 2v6h6v-6zm10-2h4v2h2v-2h4v2h-4v2h4v6h-4v-2h-4v2h-2v-2h2v-2h-2zm8 8v-2h-2v2zm-2-4h-2v-2h-2v4h4zM17 2v3h-3v2h3v3h2V7h3V5h-3V2Z'/%3E%3C/svg%3E");
+  }
+
+input[type="file"] {
+	display: none;
 }
